fixes wrong positioning when multiple dimensions

--- a/test/expected/style.sass
+++ b/test/expected/style.sass
@@ -1,5 +1,5 @@
-$png: -0px -0px 136px 136px
-$jpg: -0px -136px 520px 520px
+$png: -0px -0px 68px 68px
+$jpg: -0px -68px 260px 260px
 
 =sprite-width($sprite)
   width: nth($sprite, 3)
